# druo

./: README.md  problem.md
.github/workflows/: ci-back.yml
back/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
back/app/: main.py
back/app/api/v1/: __init__.py
back/app/api/v1/endpoints/: merchants.py  payments.py  retry_config.py  retry_logic.py  simulation.py  webhooks.py
back/app/core/: __init__.py  config.py  database.py  seeds.py
back/app/models/: __init__.py  audit_log.py  merchant.py  payment.py  retry_config.py  retry_job.py
back/app/services/: audit_logs.py  merchants.py  payments.py  retry_config.py  retry_jobs.py
back/db/: init.sql  schema.sql
back/db/seeds/: dev.sql  prod.sql
back/tests/: conftest.py  test_audit_logs.py  test_merchants.py  test_payments.py  test_retry_config.py  test_retry_jobs.py
docs/: 00-prd-index.md  01-problem-statement.md  02-mvp-scope.md  03-key-risks.md  04-backlog.md  05-success-metrics.md  06-rollout-plan.md  07-architecture.md
front/: .env.example
front/src/: App.css  App.tsx  api.ts  index.css  types.ts
front/src/components/: Alert.tsx  ConfigPanel.tsx  Header.tsx  PaymentsTable.tsx  SimulatePanel.tsx  StatsGrid.tsx  index.ts
n8n/: README.md  payment-retry-workflow.json
