[project]
name = "app"
version = "1.0.0"
description = "Automatic Payment Retry System - MVP for Novo/DRUO"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Luis Guzman" }
]

dependencies = [
    # FastAPI + Async Server
    "fastapi[standard]>=0.128.0",
    
    # Database - Async PostgreSQL
    "sqlmodel>=0.0.31",
    "asyncpg>=0.31.0",
    
    # Validation & Settings
    "pydantic-settings>=2.12.0",
    
    # HTTP Client (webhooks to n8n)
    "httpx>=0.28.0",

    "greenlet>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.21.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["db*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

